// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ActionControls/DrawingControls should correctly render pending drawing controls 1`] = `
<div
  className="ba-action-controls-draw"
>
  <PlainButton
    className="ba-drawing-save-btn"
    type="button"
  >
    <IconCheck />
  </PlainButton>
  <PlainButton
    className="ba-drawing-delete-btn"
    onClick={[MockFunction]}
    type="button"
  >
    <IconTrash
      height={20}
      width={20}
    />
  </PlainButton>
</div>
`;

exports[`components/ActionControls/DrawingControls should correctly render saved drawing controls 1`] = `
<div
  className="ba-action-controls-draw"
>
  <PlainButton
    className="ba-drawing-delete-btn"
    onClick={[MockFunction]}
    type="button"
  >
    <IconTrash
      height={20}
      width={20}
    />
  </PlainButton>
</div>
`;
